--- a/build.yaml
+++ b/build.yaml
@@ -17,6 +17,9 @@ include:
     shield: sofle_left
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
+    kconfig: |
+      CONFIG_ZMK_SPLIT=y
+      CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   - board: nice_nano_v2
     shield: sofle_right
     kconfig: |
