--- a/build.yaml
+++ b/build.yaml
@@ -16,12 +16,13 @@ include:
   - board: nice_nano_v2
     shield: sofle_left
     snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y
+    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
     kconfig: |
       CONFIG_ZMK_SPLIT=y
       CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   - board: nice_nano_v2
     shield: sofle_right
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y -DCONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
     kconfig: |
       CONFIG_ZMK_SPLIT=y
       CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
