--- a/build.yaml
+++ b/build.yaml
@@ -22,7 +22,13 @@ include:
       CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   - board: nice_nano_v2
     shield: sofle_right
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y -DCONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1 -DCONFIG_BT_DEVICE_NAME="Sofle-R" -DCONFIG_BT_DEVICE_NAME_DYNAMIC=n -DCONFIG_BT_LIM_ADV_TIMEOUT=0 -DCONFIG_BT_MAX_CONN=2
+    cmake-args: >-
+  -DCONFIG_ZMK_SPLIT=y
+  -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+  -DCONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
+  -DCONFIG_BT_DEVICE_NAME=\"Sofle-R\"
+  -DCONFIG_BT_MAX_CONN=2
+  -DCONFIG_BT_LIM_ADV_TIMEOUT=180
     kconfig: |
       CONFIG_ZMK_SPLIT=y
       CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
