--- a/build.yaml
+++ b/build.yaml
@@ -15,23 +15,24 @@
 include:
   - board: nice_nano_v2
     shield: sofle_left
+    artifact: left_peripheral
     snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-    kconfig: |
-      CONFIG_ZMK_SPLIT=y
-      CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    cmake-args: >-
+      -DCONFIG_ZMK_STUDIO=y
+      -DCONFIG_ZMK_SPLIT=y
+      -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+
   - board: nice_nano_v2
     shield: sofle_right
+    artifact: right_central
     cmake-args: >-
-  -DCONFIG_ZMK_SPLIT=y
-  -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
-  -DCONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
-  -DCONFIG_BT_DEVICE_NAME=\"Sofle-R\"
-  -DCONFIG_BT_MAX_CONN=2
-  -DCONFIG_BT_LIM_ADV_TIMEOUT=180
-    kconfig: |
-      CONFIG_ZMK_SPLIT=y
-      CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
-      CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
+      -DCONFIG_ZMK_SPLIT=y
+      -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+      -DCONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
+      -DCONFIG_BT_DEVICE_NAME=\"Sofle-R\"
+      -DCONFIG_BT_MAX_CONN=2
+      -DCONFIG_BT_LIM_ADV_TIMEOUT=180
+
   - board: nice_nano_v2
     shield: settings_reset
+    artifact: settings_reset
